Add new view services
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -34,7 +34,11 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * The [*DataFile*](/types/2/0220-Files-and-Folders) type has a attribute called *fileExtension*.  New types that inherit from *DataFile* have been defined for a wide range of file types: [*SpreadsheetFile*](/types/2/0220-Files-and-Folders), [*XMLFile*](/types/2/0220-Files-and-Folders), [*AudioFile*](/types/2/0221-Document-Stores), [*VideoFile*](/types/2/0221-Document-Stores), [*3DImageFile*](/types/2/0221-Document-Stores), [*RasterFile*](/types/2/0221-Document-Stores), [*VectorFile*](/types/2/0221-Document-Stores), [*SourceCodeFile*](/types/2/0280-Software-Development-Assets), [*ExecutableFile*](/types/2/0280-Software-Development-Assets), [*ScriptFile*](/types/2/0280-Software-Development-Assets), [*BuildInstructionFile*](/types/2/0280-Software-Development-Assets), [*YAMLFile*](/types/2/0280-Software-Development-Assets), [*PropertiesFile*](/types/2/0280-Software-Development-Assets), and [*ArchiveFile*](/types/2/0226-Archive-Files).  There is also a new relationship called [*ArchiveFileContents*](/types/2/0226-Archive-Files) to identify the contents of an archive file.
     * There are new attributes called *isCaseSensitive* and *category* for [*ValidValueDefinition*](/types/5/0545-Reference-Data) that provides additional information used to match valid values. In addition, there are two new types of valid value relationship: *ValidValueAssociation* and *ConsistentValidValues*.
     * The [*ConnectorType*](/types/2/0201-Connectors-and-Connections) entity has a new attribute called *deployedImplementationType* to allow a connector writer to record the [deployed implementation type](/concepts/deployed-implementation-type) that the connector works with.
-    * The [*Template*](/types/0/0011-Managing-Referenceables) classification has three new properties: *versionIdentifier*, *placeholderProperties* and *replacementProperties*.  This model also includes a new relationship called *CatalogTemplate* to identify a template for a particular type of technology.
+    * The [*Template*](/types/0/0011-Managing-Referenceables) classification has a new property called *versionIdentifier*.  This model also includes a new relationship called *CatalogTemplate* to identify a template for a particular type of technology.
+    * The [*CatalogTarget*](/types/4/0464-Dynamic-Integration-Groups) relationship has two new properties: *configurationProperties* and *metadataSourceQualifiedName*.
+    * The [*Topic*](/types/2/0223-Events-and-Logs) entity how has a *topicName* attribute.
+    * [*ConsistentValidValue*](/types/5/0545-Reference-Data) is a new relationship that links valid values that represent different properties, and are typically seen together in the same data item.
+    * [*SpecificationPropertyAssignment*](/types/5/0545-Reference-Data) is a new relationship that links a valid value that represents a type of configurable property with the element that represents the associated implementation.
 
 ??? warning "XTDB repository connector is now in egeria.git"
     The XTDB repository connector is now located in the core Egeria git repository which means it is always available in the containers and distributions.  This change is in recognition that XTDB is our premier metadata repository.  There are three new administration commands to simplify the configuration of an XTDB repository.
@@ -111,8 +115,14 @@ Release 5.0 is a major functional release focused on usability, both from the po
 ??? functional "Extended support for file system monitoring"
     The context for all the [Open Metadata Integration Services (OMIS)](/services/omis) has been updated to support a file system listener.  This means that [integration connectors](/concepts/integraiton-connector) can easily monitor changing files and directories.  This can be useful for situations where new information is being exchanged with open metadata using files such as CSV files and spreadsheets.
 
+??? functional "New View Service: Governance Author OMVS"
+    [Governance Author OMVS](/services/omvs/governance-author/overview) is a new view service for managing the definitions of governance action types and and governance action processes.
+
 ??? functional "New View Service: Automated Curation OMVS"
-    [Automated Curation OMVS](/services/omvs/automated-curation/overview) is a new view service in design that supports UIs that enable the user to set up integration connectors in an integration daemon, run engine actions and governance action processes.
+    [Automated Curation OMVS](/services/omvs/automated-curation/overview) is a new view service that enable the user to set up integration connectors in an integration daemon, run engine actions and governance action processes.
+
+??? functional "New View Service: Feedback Manager OMVS"
+    [Feedback Manager OMVS](/services/omvs/feedback-manager/overview) is a new view service that supports the management of feedback (comments, likes, informal tags, notelogs and reviews) from users.  The feedback support in Glossary Browser OMVS has been removed.
 
 ??? functional "Improved anchor support"
     Anchor classifications now include the type name of the anchor entity.  This allows the Anchor classification to be used to search for string values in any element that is anchored to a particular type of element.
@@ -177,8 +187,9 @@ Release 5.0 is a major functional release focused on usability, both from the po
 ??? functional "Integration Connector Providers can now list catalog target types"
     The developer of an [integration connector](/concepts/integration-connector) can provide information about the third party technology it exchanges metadata with through [catalog target types](/concepts/catalog-target).
 
-??? functional "Overriding configuration properties for each catalog target"
-    An integration connector's behaviour is controlled through a map of configuration properties passed in the *configurationProperties* attribute of the integration connector's connection object.  It is now possible to override the settings of these properties for each catalog target that the integration connector iw processing.  These overriding configuration properties are stored in the [*CatalogTarget*](/types/4/0464-Dynamic-Integration-Groups) relationship's properties.
+??? functional "Overriding configuration properties and metadataSourceQualifiedName for each catalog target"
+     An integration connector's behaviour is controlled through a map of configuration properties passed in the *configurationProperties* attribute of the integration connector's connection object.  It is now possible to override the settings of these properties for each catalog target that the integration connector is processing.  These overriding configuration properties are stored in the [*CatalogTarget*](/types/4/0464-Dynamic-Integration-Groups) relationship's properties.
+     Similarly, the metadata collection that elements catalogued by an integration connector is controlled by the *metadataSourceQualifiedName* attribute of the [*RegisteredIntegrationConnector*](/types/4/0464-Dynamic-Integration-Groups) relationship.  It is now possible to override the metadata source qualified name for each catalog target that the integration connector is processing.  The overriding value is also stored in the [*CatalogTarget*](/types/4/0464-Dynamic-Integration-Groups) relationship's properties.
 
 ??? functional "Governance Service Providers can now export their specification"
     The developer of a [governance service](/concepts/governance-service) can provide information about the request types, request parameters and [action target types](/concepts/action-target) it consumes and produces making it easier for consumers creating [governance engine definitions](/concepts/governance-engine-definition), [governance action types](/concepts/governance-action-type) and [governance action processes](/concepts/governance-action-process) to incorporate the governance service into their work.
