Add Valid Metadata OMVS
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -7,7 +7,8 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.0 is
 
 Release 5.0 is a major functional release focused on usability, both from the point of view of the first-time user of Egeria, and developers of the code.  It has six themes:
 
-* *Simplified up and running* - improvements to the OMAG Server Platform and administration services to make it easier to set up and run, plus new sample server configurations, and a python client for basic administration calls.
+* *Simplified up and running* - improvements to the OMAG Server Platform and administration services to make it easier to set up and run, plus new sample server configurations that mean you can get Egeria up and running without needing to understand the administration services.
+* *A python client* - pyegeria provides a python API covering Egeria's administration and operational services plus many of the Open Metadata View Services (OMVSs).  
 * *Content pack of connector metadata* - metadata to pre-configure the connectors supplied with Egeria, and provide valid value sets describing technology types and file types.
 * *UI back-end consolidation* - updates to the view server to allow both Egeria UIs to connect to it whether it is running in the OMAG Server Platform or OMAG Server Runtime.  This eliminates the need to run the Egeria UI application.
 * *Digital Product Support* - new APIs for creating a digital product catalog.
@@ -123,6 +124,15 @@ Release 5.0 is a major functional release focused on usability, both from the po
 
 ??? functional "New View Service: Feedback Manager OMVS"
     [Feedback Manager OMVS](/services/omvs/feedback-manager/overview) is a new view service that supports the management of feedback (comments, likes, informal tags, notelogs and reviews) from users.  The feedback support in Glossary Browser OMVS has been removed.
+
+??? functional "New View Service: Project Manager OMVS"
+    [Project Manager OMVS](/services/omvs/project-manager/overview) supports the definition and management of projects.  Projects can themselves be organized hierarchically.
+
+??? functional "New View Service: Collection Manager OMVS"
+    [Collection Manager OMVS](/services/omvs/collection-manager/overview) supports the organizing and browsing of metadata in collections.  Collections can themselves be organized hierarchically.  An example of its use is in managing the collections of assets that make up digital products.
+
+??? functional "New View Service: Valid Metadata OMVS"
+    [Valid Metadata OMVS](/services/omvs/valid-metadata/overview) supports the retrieval and maintenance of valid values for open metadata.
 
 ??? functional "Improved anchor support"
     Anchor classifications now include the type name of the anchor entity.  This allows the Anchor classification to be used to search for string values in any element that is anchored to a particular type of element.
