--- a/site/docs/release-notes/5-1.md
+++ b/site/docs/release-notes/5-1.md
@@ -11,8 +11,11 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.1 is
 ??? functional "New Engine Service: Context Event OMES"
     [Context Event OMES](/services/omes/context-event/overview) supports the running of [Context Event Services](/concepts/context-event-service).
 
-??? functional "New View Service: Collection Manager OMVS"
-    [Collection Manager OMVS](/services/omvs/collection-manager/overview) supports the organizing and browsing of metadata in collections.  Collections can themselves be organized hierarchically.  An example of its use is in managing the collections of assets that make up digital products.
+??? functional "New View Service: Data Discovery OMVS"
+    [Data Discovery OMVS](/services/omvs/data-discovery/overview) supports the creation of data specs and saved searches.
+
+??? functional "New View Service: Reference Data OMVS"
+    [Reference Data OMVS](/services/omvs/reference-data/overview) supports the query and maintenance of code values and reference data.
 
 
 
