--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -26,6 +26,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * The [*EngineAction*](/types/4/0463-Engine-Actions) entity has new attributes called *requesterUserId* and *requestedStartDate*.
     * A new classification called [*PersonalProject*](/types/1/0130-Projects) can be added to a project entity to indicate that it is an informal project that have been created by an individual to help them organize their work.
     * A new classification called [*StudyProject*](/types/1/0130-Projects) can be added to a project entity to indicate that it is a focused analysis of a topic, person, object or situation.
+    * New properties called *priority*, *projectHealth* and *projectPhase* has been added to the  [*Project*](/types/1/0130-Projects) entity to represent the status of the project.
     * A new classification called [*DataScope*](/types/2/0210-Data-Stores) can be added to a referenceable entity (typically a DataStore or DataSet) to define the scope of the associated data resource in space and time.
     * Although not yet implemented in the [Engine Host](/concepts/engine-host), there are types for a new type of governance engine called the [*ContextEventEngine*](/types/4/0461-Governance-Engines) and its corresponding governance service called [*ContextEventService*](/types/4/0461-Governance-Engines).  This new engine is for managing context events, scheduling and associated actions.
     * A new entity called a [*ContextEvent*](/types/4/0475-Context-Events) plus associated elements has been added to provide a means to capture significant events that impact users, data, services, etcetera, to be recorded and used to explain why blips occurred in the past, or plan and take action to mitigate against blips in the future.
