Add more description on templates
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -1,17 +1,17 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.0 (Expected March 2024)
+## Release 5.0 (Expected May 2024)
 
 _**These are DRAFT release notes.  The notes will be updated until & when 5.0 is released**_
 
 Release 5.0 is a major functional release focused on usability, both from the point of view of the first-time user of Egeria, and developers of the code.  It has six themes:
 
 * *Simplified up and running* - improvements to the OMAG Server Platform and administration services to make it easier to set up and run, plus new sample server configurations that mean you can get Egeria up and running without needing to understand the administration services.
-* *A python client* - pyegeria provides a python API covering Egeria's administration and operational services plus many of the Open Metadata View Services (OMVSs).  
+* *A python client* - pyegeria provides a python API covering Egeria's administration and operational services plus many of the Open Metadata View Services (OMVSs) provides access to Egeria through this popular programming language for administrators and data professionals.  
 * *Content pack of connector metadata* - metadata to pre-configure the connectors supplied with Egeria, and provide valid value sets describing technology types and file types.
 * *UI back-end consolidation* - updates to the view server to allow both Egeria UIs to connect to it whether it is running in the OMAG Server Platform or OMAG Server Runtime.  This eliminates the need to run the Egeria UI application.
-* *Digital Product Support* - new APIs for creating a digital product catalog.
+* *Digital Product Support* - new APIs for creating a [digital product catalog](/concepts/digital-product).
 * *Survey Support* - new framework, services and report utility to support the surveying of digital resources to understand its contents before embarking on wholesale cataloguing and governance.
 * *Reduction of technical debt* - there has been internal code changes to remove deprecated code, remove the duplication of type information, and many bug fixes :).
 
@@ -68,7 +68,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
         If you have been using Egeria for a while, you may be familiar with the term *Governance Action* as the mechanism used to control the execution of automated actions in the [Engine Hosts](/concepts/engine-host).  In release 5.0, *Governance Action* is renamed to *Engine Action* to create a greater name differentiation between the concepts that are used to define the governance behaviour and those used to control the execution of this behaviour.  The term *Governance Action* is now used as a general term for a [Governance Action Process](/concepts/governance-action-process) or a [Governance Action Type](/concepts/governance-action-type).  There is also a differentiation between a Governance Action Type that is used to initiate a standalone Engine Action and a specialized Governance Action Type called a [Governance Action Process Step](/concepts/governance-action-process-step) that describes a single step in a Governance Action Process.
 
 ??? functional "New Python client called pyegeria"
-    A new python client called `pyegeria` for Egeria's administrative, platform and server operational services is available on `pypi`.  Future plans include coverage of all view services and the metadata highway and governance server operational services.
+    A new python client called `pyegeria` for Egeria's administrative, platform and server operational services is available on `pypi`.  It also includes coverage of many of the view services.  Future versions will add the metadata highway and governance server operational services.
 
 ??? functional "Improved administration"
     ??? functional "New administration commands for basic server properties"
