Add details of multi-threaded integration daemon
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -70,6 +70,9 @@ Release 5.0 is a major functional release focused on usability, both from the po
 ??? functional "New Python client called pyegeria"
     A new python client called `pyegeria` for Egeria's administrative, platform and server operational services is available on `pypi`.  It also includes coverage of many of the view services.  Future versions will add the metadata highway and governance server operational services.
 
+??? functional "Integration Daemon runs each integration connector in its own thread"
+    Integration connectors running in an [integration daemon](/concepts/integration-daemon) are now each given their own thread to run in so that a busy integration connector does not prevent other integration connectors from running.
+
 ??? functional "Improved administration"
     ??? functional "New administration commands for basic server properties"
         The administration services support new commands to set up, retrieve and clear the basic server properties in a server's [configuration document](/concepts/configuration-document) in one operation.  These properties are *serverDescription*, *organizationName*, *localServerUserId*, *localServerPassword* and *maxPageSize*.  The new calls are described in the [Administration Guide](/guides/admin/servers/by-section/basic-server-properties-section).
