Update descriptions of anchors
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-1.md
+++ b/site/docs/release-notes/4-1.md
@@ -19,7 +19,7 @@
     In this release we have added the following view services to aid organizations writing user interfaces (UIs):
 
     * [Glossary Browser OMVS](/services/omvs/glossary-browser/overview)
-    * [Glossary Workflow OMVS](/services/omvs/glossary-workflow/overview)
+    * [Glossary Manager OMVS](/services/omvs/glossary-manager/overview)
 
 ??? functional "Glossary specific security"
     The [Server Metadata Security Connector](/concepts/server-metadata-security-connector) has been extended with a new optional interface that allows the connector to control authorization requests to glossaries.  See the [Metadata Security](/features/metadata-security/overview) feature for more details.
