--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -120,8 +120,8 @@ Release 5.0 is a major functional release focused on usability, both from the po
 ??? functional "Extended support for file system monitoring"
     The context for all the [Open Metadata Integration Services (OMIS)](/services/omis) has been updated to support a file system listener.  This means that [integration connectors](/concepts/integraiton-connector) can easily monitor changing files and directories.  This can be useful for situations where new information is being exchanged with open metadata using files such as CSV files and spreadsheets.
 
-??? functional "New View Service: Governance Author OMVS"
-    [Governance Author OMVS](/services/omvs/governance-author/overview) is a new view service for managing the definitions of governance action types and and governance action processes.
+??? functional "New View Service: Action Author OMVS"
+    [Action Author OMVS](/services/omvs/action-author/overview) is a new view service for managing the definitions of governance action types and and governance action processes.
 
 ??? functional "New View Service: Automated Curation OMVS"
     [Automated Curation OMVS](/services/omvs/automated-curation/overview) is a new view service that enable the user to set up integration connectors in an integration daemon, run engine actions and governance action processes.
@@ -168,7 +168,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
         * [Automated Curation OMVS](/services/omvs/automated-curation/overview)
         * [Collection Manager OMVS](/services/omvs/automated-curation/overview)
         * [Glossary Browser OMVS](/services/omvs/glossary-browser/overview)
-        * [Glossary Workflow OMVS](/services/omvs/glossary-workflow/overview)
+        * [Glossary Manager OMVS](/services/omvs/glossary-manager/overview)
         * [My Profile OMVS](/services/omvs/my-profile/overview)
         * [Notification Manager OMVS](/services/omvs/notification-manager/overview)
 
