--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -10,7 +10,6 @@ Release 5.0 is a major functional release focused on usability, both from the po
 * *Simplified up and running* - improvements to the OMAG Server Platform and administration services to make it easier to set up and run, plus new sample server configurations that mean you can get Egeria up and running without needing to understand the administration services.
 * *A python client* - pyegeria provides a python API covering Egeria's administration and operational services plus many of the Open Metadata View Services (OMVSs) provides access to Egeria through this popular programming language for administrators and data professionals.  
 * *Content pack of connector metadata* - metadata to pre-configure the connectors supplied with Egeria, and provide valid value sets describing technology types and file types.
-* *UI back-end consolidation* - updates to the view server to allow both Egeria UIs to connect to it whether it is running in the OMAG Server Platform or OMAG Server Runtime.  This eliminates the need to run the Egeria UI application.
 * *Digital Product Support* - new APIs for creating a [digital product catalog](/concepts/digital-product).
 * *Survey Support* - new framework, services and report utility to support the surveying of digital resources to understand its contents before embarking on wholesale cataloguing and governance.
 * *Reduction of technical debt* - there has been internal code changes to remove deprecated code, remove the duplication of type information, and many bug fixes :).
@@ -139,49 +138,19 @@ Release 5.0 is a major functional release focused on usability, both from the po
     [Valid Metadata OMVS](/services/omvs/valid-metadata/overview) supports the retrieval and maintenance of valid values for open metadata.
 
 ??? functional "Improved anchor support"
-    Anchor classifications now include the type name of the anchor entity.  This allows the Anchor classification to be used to search for string values in any element that is anchored to a particular type of element.
+    Anchor classifications now include the type name and domain of the anchor entity.  This allows the Anchor classification to be used to search for string values in any element that is anchored to a particular type of element.
 
-??? functional "Consolidation of UI Backend Services"
-    Today there are two approaches to providing the backend services for a UI:
-
-    * The OMAG Server Platform provides a set of view services. These are used by the React UI.
-    * There is also a set of services in the Egeria UI Application. These are used by the General User UI.
-
-    The issue with this approach is when the same service is needed for both UIs, it has to be implemented twice, one in each runtime. 
-
-    There is now a common approach for backend services, centered around the [view server](/concepts/view-server). This can run in the OMAG Server Platform, or the new single server OMAG Server runtime.  The Open Metadata View Services (OMVSs) running in the view server will provide all the services for the UIs. To make this possible, new services for token management have been added to the OMAG Server Platform and OMAG Server runtimes.  There are also updates to the view services.  The change is summarized in the diagram below:
-
-    ![UI API migration](/user-interfaces/ui-migration-api-styles.svg)
-
-    More details of the changes are described below:
-
-    ??? functional "New View Service: Asset Catalog OMVS"
-        [Asset Catalog OMVS](/services/omvs/asset-catalog/overview) is a new view service that supports the `/assets` and `/lineage` services from Egeria UI Application.  There are two versions of each call, one of which is deprecated.  The deprecated version exactly matches the API supported by the Egeria UI application, however, it does not manage exceptions in the way expected by an Egeria API.  It will remain in place until the existing UI components are updated to support Egeria's standard exception handling.
-
-    ??? functional "Updates to Glossary Browser OMVS"
-        [Glossary Browser OMVS](/services/omvs/glossary-browser/overview) has been extended to support the `/glossary` services from the Egeria UI application.  They are deprecated because they do not support the standard exception handling, but are in place to support existing UI components.  Once the UI components have been updated to support the main API then these new services will be removed.
-
-    ??? danger "Changes to view service REST API URLs"
-        The following Open Metadata View Services (OMVSs) (and all future OMVSs) support the new URL pattern of `{{baseURL}}/servers/{{server}}/api/open-metadata/{{serviceURLRoot}}/...`
-
-        * [Asset Catalog OMVS](/services/omvs/asset-catalog/overview)
-        * [Automated Curation OMVS](/services/omvs/automated-curation/overview)
-        * [Collection Manager OMVS](/services/omvs/automated-curation/overview)
-        * [Glossary Browser OMVS](/services/omvs/glossary-browser/overview)
-        * [Glossary Manager OMVS](/services/omvs/glossary-manager/overview)
-        * [My Profile OMVS](/services/omvs/my-profile/overview)
-        * [Notification Manager OMVS](/services/omvs/notification-manager/overview)
-
-        The following OMVSs will continue to support the original URL pattern of `{{baseURL}}/servers/{{server}}/open-metadata/view-services/{{serviceURLRoot}}/...` until the React UI components are updated to support the new style of URL.
-
-        * [Dynamic Infrastructure and Operations OMVS](/services/omvs/dino/overview)
-        * [Glossary Author OMVS](/services/omvs/glossary-author/overview)
+??? functional "Removal of JavaScript User Interfaces"
+    The original intention with the UIs was to consolidate their backend services onto the OMAG Server Platform/Runtime.  Unfortunately, neither UI code based is building and the security scanners are reporting serious CVEs with the JavaScript code bases.  There is no-one left in the community that is able to work with the JavaScript and so, for now these UIs have been deprecated.  The runtime services that support the UIs have also been deprecated and removed from the runtime build.  The code is temporarily still in the repository and will be cleaned up in a future release if no progress is made on the JavaScript code.
 
     ??? deprecated "Deprecation of Egeria UI Application"
-        Due to the addition of the new View Services and support for tokens in the OMAG Server Platform and OMAG Server runtimes, the Egeria UI Application is now deprecated.  New UI components should use the [Open Metadata View Services (OMVS)](/services/omvs).
+        Due to the addition of the new View Services and support for tokens in the OMAG Server Platform and OMAG Server runtimes, the Egeria UI Application is now deprecated.  New UI components should use the [Open Metadata View Services (OMVS)](/services/omvs).  The Egeria UI Application assembly, and the open metadata assembly have also been deprecated.
 
-    ??? deprecated "Asset Catalog OMAS and Glossary View OMAS"
-        The Glossary View OMAS and Asset Catalog OMAS function has now moved to Glossary Browser OMVS and Asset Catalog OMVS respectively and so Glossary View OMAS and Asset Catalog OMAS are no longer needed.  They will remain in the codebase to support the Egeria UI Application and will be removed at the same time as this runtime.
+    ??? deprecated "Asset Catalog, OMAS Subject Area OMAS and Glossary View OMAS"
+        The function of these services has now moved to Glossary Manager OMAS, Glossary Browser OMVS and Asset Catalog OMVS. 
+
+    ??? deprecated "Repository Explorer OMVS, Type Explorer OMVS, Dynamic Infrastructure Explorer OMVS, Server Author OMVS, Glossary Author OMVS are now deprecated"
+        These services have been removed from Egeria's build, but their code is temporariliy still in the Egeria.git repository. 
 
 ??? functional "New file extensions to Egeria' standard files"
     Files produced by Egeria supplied connectors now have specific file extensions to help identify them in the file system.  Previously they used the file extension for their format 9such as `.json`.
@@ -219,6 +188,9 @@ Release 5.0 is a major functional release focused on usability, both from the po
 
 ??? info "Management of open metadata type definitions"
     As the Egeria code base evolved, sets of definitions for the unique identifiers and type names of the open metadata types appeared in multiple modules.  There was a set in the open metadata archive helper, the generic handlers, multiple OMASs and the Governance Action Framework.  This was in addition to the original definitions in the open metadata type archive itself.  In release 5.0, these copies of the open metadata type identifiers have been consolidated into one set found in the Governance Action Framework.  There is still work to change the type definitions in the open metadata type archive to use the definitions from the GAF.  This change removes the inconsistencies and gaps in the definitions.  It also makes it easier to discover where a particular open metadata type is used.
+
+??? deprecated "Deprecation of Data Engine Proxy and Data Engine OMAS"
+    These services have been deprecated since they are specialized for IBM's Information Server product.  IF support for this product is required in the future then it will be reimplemented in the Integration Daemon.
 
 ??? danger "Removal of the Anonymous Repository Services"
     The anonymous versions to the OMRS Metadata Collection REST APIs have been removed from Egeria's runtimes since they do not include caller information, and therefore provide opportunities for a denial of service attack.  These services were deprecated in version 2 of Egeria.
