--- a/site/docs/release-notes/june-2024.md
+++ b/site/docs/release-notes/june-2024.md
@@ -9,7 +9,7 @@ Version 5.0 reflects a shift in Egeria's strategy.  Egeria is still essentially 
 
 The take-up of Egeria by vendors has been slow, but the [challenge of linking the myriad of technologies deployed in many organizations](https://egeria-project.org/introduction/challenge/) is still all to prevalent in organizations, particularly as the use of data and AI grows, along with new regulations, hybrid-cloud deployments and staff turn-over.   Therefore, we have shifted our focus to developing and packaging our technology for people that want to use Egeria.  Version 5.0 is the first step on that path, with its focus on simplification, and supporting users with the technologies they are most comfortable working with.  Most notable for V5.0 is the introduction of `pyegeria` - a comprehensive python package for open metadata and governance.
 
-The community has also continued to innovate.  Whilst it does not aim to replace traditional data catalogs - it is still challenging the traditional approaches to metadata management through its focus on open formats for metadata, metadata distribution, linking metadata with master data and reference data, and using metadata in decision-making. To this end we have introduced a survey framework to help organizations decide which data and systems are valuable enough to add to their metadata catalogs.  This aims to speed up the cataloguing process, and avoid having useless content clogging up their metadata catalogs.
+The community has also continued to innovate.  Whilst it does not aim to replace current data catalogs - it is still challenging the traditional approaches to metadata management through its focus on open formats for metadata, metadata distribution, linking metadata with master data and reference data, and using metadata in decision-making. To this end we have introduced a survey framework to help organizations decide which data and systems are valuable enough to add to their metadata catalogs.  This aims to speed up the cataloguing process, and avoid having useless content clogging up their metadata catalogs.
 
 Finally, there is the standard code clean up and enhancements to existing features that is typically for any software release.
 
@@ -17,7 +17,7 @@ Enjoy ...
 
 ## Survey before catalog
 
-For organizations starting a data or system cataloguing initiative, the temptation is to "catalog everything" and shift through the results afterwards, using the UI of the metadata catalog.  However, metadata ingestion into a catalog can take a lot of time, and results in a bloated catalog where the valuable [assets](/concepts/asset) are lost in a sea of irrelevant content.
+For organizations starting a data or system cataloguing initiative, the temptation is to "catalog everything" and sift through the results afterwards, using the UI of the metadata catalog.  However, metadata ingestion into a catalog can take a lot of time, and results in a bloated catalog where the valuable [assets](/concepts/asset) are lost in a sea of irrelevant content.
 
 Instead, imaging having a [survey report](/concepts/survey-report) of one of your file systems that gives you an overview of its content, classified by type and use.  You then run more detailed survey reports on specific directories, or types of files, helping you to pinpoint where the interesting data is located.  The automated cataloguing is directed to this area, rapidly ingesting metadata about the most valuable [digital resources](/concepts/resource) into your catalog.
 
@@ -34,7 +34,7 @@ Python is growing in popularity, particularly amongst data professionals.  Egeri
 
 Pyegeria also provides [monitoring widgets](/user-interfaces/python-widgets/overview).
 
-Pyegeria can be downloaded and installed from [PyPi](https://pypi.org/project/pyegeria/)
+Pyegeria can be downloaded and installed from [PyPI](https://pypi.org/project/pyegeria/)
 
 
 ## Ready to go
@@ -65,7 +65,7 @@ The full release notes vor version 5.0 can be found on [Egeria's website](https:
 
 ## Future plans
 
-Release 5.1 Will continue to build out new [view services](/services/omvs) supported by `pyegeria`, and connectors, such as survey action services, to increase its out-of-the-box connectivity.
+Release 5.1 will continue to build out new [view services](/services/omvs) supported by `pyegeria`, and connectors, such as survey action services, to increase its out-of-the-box connectivity.
 
 There is also work on a new text-based UI for supporting data professionals in their work.
 
