--- a/site/docs/release-notes/june-2024.md
+++ b/site/docs/release-notes/june-2024.md
@@ -7,7 +7,7 @@ Welcome to the Egeria community's June 2024 newsletter.  This is our first newsl
 
 Version 5.0 reflects a shift in Egeria's strategy.  Egeria is still essentially an [open metadata exchange and governance](/introduction/overview) capability.  However, its initial remit was to supply libraries to vendors to include in their tools products so that these products could exchange metadata with one another.  
 
-The take-up of Egeria by vendors has been slow, but the [challenge of linking the myriad of technologies deployed in many organizations](https://egeria-project.org/introduction/challenge/) is still all to prevalent in organizations, particularly as the use of data and AI grows, along with new regulations, hybrid-cloud deployments and staff turn-over.   Therefore, we have shifted our focus to developing and packaging our technology for people that want to use Egeria.  Version 5.0 is the first step on that path, with its focus on simplification, and supporting users with the technologies they are most comfortable working with.  Most notable for V5.0 is the introduction of `pyegeria` - a comprehensive python package for open metadata and governance.
+The take-up of Egeria by vendors has been slow, but the [challenge of linking the myriad of technologies deployed in many organizations](/introduction/challenge) is still all to prevalent in organizations, particularly as the use of data and AI grows, along with new regulations, hybrid-cloud deployments and staff turn-over.   Therefore, we have shifted our focus to developing and packaging our technology for people that want to use Egeria.  Version 5.0 is the first step on that path, with its focus on simplification, and supporting users with the technologies they are the most comfortable working with.  Most notable for V5.0 is the introduction of `pyegeria` - a comprehensive python package for open metadata and governance.
 
 The community has also continued to innovate.  Whilst it does not aim to replace current data catalogs - it is still challenging the traditional approaches to metadata management through its focus on open formats for metadata, metadata distribution, linking metadata with master data and reference data, and using metadata in decision-making. To this end we have introduced a survey framework to help organizations decide which data and systems are valuable enough to add to their metadata catalogs.  This aims to speed up the cataloguing process, and avoid having useless content clogging up their metadata catalogs.
 
@@ -19,11 +19,11 @@ Enjoy ...
 
 For organizations starting a data or system cataloguing initiative, the temptation is to "catalog everything" and sift through the results afterwards, using the UI of the metadata catalog.  However, metadata ingestion into a catalog can take a lot of time, and results in a bloated catalog where the valuable [assets](/concepts/asset) are lost in a sea of irrelevant content.
 
-Instead, imaging having a [survey report](/concepts/survey-report) of one of your file systems that gives you an overview of its content, classified by type and use.  You then run more detailed survey reports on specific directories, or types of files, helping you to pinpoint where the interesting data is located.  The automated cataloguing is directed to this area, rapidly ingesting metadata about the most valuable [digital resources](/concepts/resource) into your catalog.
+Instead, imagine having a [survey report](/concepts/survey-report) of one of your file systems that gives you an overview of its content, classified by type and use.  You then run more detailed survey reports on specific directories, or types of files, helping you to pinpoint where the interesting data is located.  The automated cataloguing is directed to this area, rapidly ingesting metadata about the most valuable [digital resources](/concepts/resource) into your catalog.
 
 Automated cataloguing is ongoing, constantly picking up new resources, as they are created and changed.  Surveys are similar.  They can be configured to run on a regular schedule, so that they capture a picture of how the resources are changing over time.  This is useful for the catalog users and may identify new areas of value in your IT landscape.
 
-Egeria's new [survey action framework](/frameworks/saf/overview) provides the mechanisms to support pluggable [survey action services](/concepts/survey-action-service) that connect to a specific technology and produces a survey report.  In version 5.0 we have developed a variety of survey action services for file systems and PostgreSQL databases as a way to validate the framework.  No doubt in future release will include additional survey action services for other types of technology.  There is also a SDK for [developing your own survey action services](/guides/developer/survey-action-services/overview/) to plug into Egeria.
+Egeria's new [survey action framework](/frameworks/saf/overview) provides the mechanisms to support pluggable [survey action services](/concepts/survey-action-service) that connect to a specific technology and produces a survey report.  In version 5.0 we have developed a variety of survey action services for file systems and PostgreSQL databases as a way to validate the framework.  No doubt in future release will include additional survey action services for other types of technology.  There is also an SDK for [developing your own survey action services](/guides/developer/survey-action-services/overview) to plug into Egeria.
 
 ## First-class support for python programmers
 
@@ -39,7 +39,7 @@ Pyegeria can be downloaded and installed from [PyPI](https://pypi.org/project/py
 
 ## Ready to go
 
-Version 5.0 comes with pre-built configuration for its servers and connectors so you can simply download, build and run Egeria in three easy steps.  The pre-built configuration is sufficient to run most of Egeria's features, either as part of an evaluation, or providing your first deployment.  This is backed up by a new blog series called [Getting Started with Egeria](https://getting-started-with-egeria.pdr-associates.com/introduction.html).
+Version 5.0 comes with pre-built configuration for its servers and connectors, so you can simply download, build and run Egeria in three easy steps.  The pre-built configuration is sufficient to run most of Egeria's features, either as part of an evaluation, or providing your first deployment.  This is backed up by a new blog series called [Getting Started with Egeria](https://getting-started-with-egeria.pdr-associates.com/introduction.html).
 
 There is also a script for building a customized Docker image to make it easy to customize Egeria for your own container-base deployment.
 
@@ -51,7 +51,7 @@ Egeria has a new  REST API called [Collection Manager OMVS](/services/omvs/colle
 
 The Earth Observation professional have traditionally organized satellite data as collections of related data sets - just like a digital product.  In fact the approach used by earth observation catalogs such as [USGS](https://www.usgs.gov/) and the [Spatio-Temporal Asset Catalog (STAC)](https://stacspec.org/en/) standard was used as input into the design of Egeria's digital product support.  
 
-As a result of working with this type of data, we have extended the [Open Metadata Types](/types) to allow geo-spacial information, such as elevation and a bounded box (bbox), to be attach to a data set description.  This is implemented in the [DataScope](/types/2/0210-Data-Stores) classification.
+As a result of working with this type of data, we have extended the [Open Metadata Types](/types) to allow geospatial information, such as elevation and a bounded box (bbox), to be attached to a data set description.  This is implemented in the [DataScope](/types/2/0210-Data-Stores) classification.
 
 ## Egeria Explorers
 
@@ -61,7 +61,7 @@ This website is built form [the brain](https://www.thebrain.com/) technology.  T
 
 ## Full release notes for V5.0
 
-The full release notes vor version 5.0 can be found on [Egeria's website](https://egeria-project.org/release-notes/5-0/).
+The full release notes for version 5.0 can be found on [Egeria's website](https://egeria-project.org/release-notes/5-0/).
 
 ## Future plans
 
@@ -71,7 +71,9 @@ There is also work on a new text-based UI for supporting data professionals in t
 
 ## Connecting with the project
 
-!!! info "Connecting with the project"
-    Go to our [community guide](/guides/community){target=blank} to find out how to find out more about the activities of the Egeria project.
+With our new focus on Python and supporting data practitioners directly, the community is looking for new contributors to the project.  If these topics interest you, then please contact us and we can help you get started.
+
+!!! info "Connecting with the community"
+    Go to our [community guide](/guides/community){target=blank} to find out more about the activities of the Egeria project nd ho to get engaged.
 
 --8<-- "snippets/abbr.md"
