Move release note snippets
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/3-13.md
+++ b/site/snippets/release-notes/3-13.md
@@ -93,4 +93,4 @@
     For details on core Egeria changes, see the [GitHub release note for 3.13](https://github.com/odpi/egeria/releases/tag/V3.13){ target=gh } and the full [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
 
 
---8<-- "docs/snippets/abbr.md"
+--8<-- "snippets/abbr.md"
