--- a/site/snippets/release-notes/3-2.md
+++ b/site/snippets/release-notes/3-2.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 3.3 (November 2021)
+## Release 3.2 (October 2021)
 
 ??? info "Known issue: use chromium-based browser for UIs"
     
@@ -24,22 +24,28 @@
 
     ??? update "Beta documentation site"
 
-        We are making good progress moving our documentation across to a new site at https://odpi.github.io/. This is still work in progress so some material is currently missing, and some links will fail.
+        We are in the process of moving our documentation across to a new site at https://odpi.github.io/ . This is still work in progress so some material is currently missing, and some links will fail.
         
         This site should offer improved usability including navigation & search.
         
         Please continue to refer to the main documentation site for any missing content until this migration is complete.
+    
+    ??? deprecated "Docker compose"
+        The docker-compose environment was deprecated in release [3.1](3-1.md). It will be removed in release [3.3](3-3.md). See [odpi/egeria#5721 :material-dock-window:](https://github.com/odpi/egeria/issues/5721){ target=gh }. 
 
 ???+ types "Type changes: :material-plus-circle: added, :material-adjust: modified, :material-alert-circle: deprecated"
 
 
-    ??? added "Incomplete Classification"
-        New type Incomplete for classifying referencable entities used in special lineage cases. One example for such case is representing 'virtual asset' form IBM IGC external repository. See description in model [0790](/types/7/0790-Incomplete/).
+    ??? added "Governance Classification Levels"
+        New types for setting up the list of status for governance definitions.
+        See new type descriptions in model [0421](/types/4/0421-Governance-Classification-Levels.md).
+
+
 
 ???+ bugs "Bug fixes and other updates"
     For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
 
 ??? status "Implementation status"
-    [![Egeria implementation status](functional-organization-showing-implementation-status-for-3-3.svg)](/release-notes/roadmap/)
+    [![Egeria implementation status](/release-notes/functional-organization-showing-implementation-status-for-3-2.svg)](/release-notes/roadmap)
 
 --8<-- "snippets/abbr.md"
