--- a/site/snippets/release-notes/5-1.md
+++ b/site/snippets/release-notes/5-1.md
@@ -9,21 +9,8 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.1 is
     * The [ConnectorType](/types/2/0201-Connectors-and-Connections) entity type has a new attribute called *supportedDeployedImplementationType* which replaces *deployedImplementationType to separate the technology it supports from other uses of *deployedImplementationType* that identify its implementation technology.
     * The [CatalogTarget](/types/4/0464-Dynamic-Integration-Groups) relationship is now multi-link which means it is possible to have multiple instances of this relationship between the same two entities.
 
-??? functional "New View Service: Notification Manager OMVS"
-    [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [Context Events](/concepts/context-event).
-
-??? functional "New Engine Service: Context Event OMES"
-    [Context Event OMES](/services/omes/context-event/overview) supports the running of [Context Event Services](/concepts/context-event-service).
-
-??? functional "New View Service: Data Discovery OMVS"
-    [Data Discovery OMVS](/services/omvs/data-discovery/overview) supports the creation of data specs and saved searches.
-
-??? functional "New View Service: Reference Data OMVS"
-    [Reference Data OMVS](/services/omvs/reference-data/overview) supports the query and maintenance of code values and reference data.
-
-
-
-
+??? functional "Unity Catalog Support"
+    
 
 
 --8<-- "snippets/abbr.md"
