--- a/site/snippets/release-notes/5-1.md
+++ b/site/snippets/release-notes/5-1.md
@@ -7,7 +7,8 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.1 is
 
 ??? functional "Open Metadata Types"
     * The [ConnectorType](/types/2/0201-Connectors-and-Connections) entity type has a new attribute called *supportedDeployedImplementationType* which replaces *deployedImplementationType to separate the technology it supports from other uses of *deployedImplementationType* that identify its implementation technology.
-    * The [CatalogTarget](/types/4/0464-Dynamic-Integration-Groups) relationship is now multi-link which means it is possible to have multiple instances of this relationship between the same two entities.
+    * The [CatalogTarget](/types/4/0464-Dynamic-Integration-Groups) relationship is now multi-link which means it is possible to have multiple instances of this relationship between the same two entities.  It also has two new attributes: *permittedSynchronization* and *deleteMethod*.
+    * The [DataAssetEncoding](/types/2/0210-Data-Stores) classification, that attaches to a [DataAsset](/types/0/0010-Base-Model), replaces the [DataStoreEncoding](/types/2/0210-Data-Stores) classification.  The *DataStoreEncoding* is deprecated.
 
 ??? functional "Unity Catalog Support"
     
