Updates to release dates
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-0.md
+++ b/site/snippets/release-notes/5-0.md
@@ -1,9 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.0 (Expected May 2024)
-
-_**These are DRAFT release notes.  The notes will be updated until & when 5.0 is released**_
+## Release 5.0 (July 2024)
 
 Release 5.0 is a major functional release focused on usability, both from the point of view of the first-time user of Egeria, and developers of the code.  It has six themes:
 
