Add types for pre-defiend targets for action and request types
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-1.md
+++ b/site/snippets/release-notes/5-1.md
@@ -9,9 +9,11 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.1 is
     * The [ConnectorType](/types/2/0201-Connectors-and-Connections) entity type has a new attribute called *supportedDeployedImplementationType* which replaces *deployedImplementationType to separate the technology it supports from other uses of *deployedImplementationType* that identify its implementation technology.
     * The [CatalogTarget](/types/4/0464-Dynamic-Integration-Groups) relationship is now multi-link which means it is possible to have multiple instances of this relationship between the same two entities.  It also has two new attributes: *permittedSynchronization* and *deleteMethod*.
     * The [DataAssetEncoding](/types/2/0210-Data-Stores) classification, that attaches to a [DataAsset](/types/0/0010-Base-Model), replaces the [DataStoreEncoding](/types/2/0210-Data-Stores) classification.  The *DataStoreEncoding* is deprecated.
-    * There is a new type of entity called [VirtualRelationalTable](/types/2/0235-Information-View) for representing vitualized tables.
+    * There is a new type of entity called [VirtualRelationalTable](/types/2/0235-Information-View) for representing virtualized tables.
+    * There are two new relationships relating to [governance actions](/concepts/governance-action).  [TargetForActionType](/types/4/0462-Governance-Action-Processes) and [TargetForActionProcess](/types/4/0462-Governance-Action-Processes) allow targets for action to be pre-defined for a governance action type or governance action process respectively.  The [GovernanceActionProcessFlow](/types/4/0462-Governance-Action-Processes) relationship receives a new property called `requestParameters`.
 
 ??? functional "Unity Catalog Support"
+    * There are new [survey services and integration connectors](/connectors/unity-catalog) to support the new open-source Unity Catalog (UC).
     
 
 
