Update to Lemmie Stage persona
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-1.md
+++ b/site/snippets/release-notes/5-1.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.1 (Expected August 2024)
+## Release 5.1 (Expected September 2024)
 
 _**These are DRAFT release notes.  The notes will be updated until & when 5.1 is released**_
 
@@ -13,10 +13,29 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.1 is
     * There are two new relationships relating to [governance actions](/concepts/governance-action).  [TargetForActionType](/types/4/0462-Governance-Action-Processes) and [TargetForActionProcess](/types/4/0462-Governance-Action-Processes) allow targets for action to be pre-defined for a governance action type or governance action process respectively.  The [GovernanceActionProcessFlow](/types/4/0462-Governance-Action-Processes) relationship receives a new property called `requestParameters`.  Finally, there is a new entity type called [GovernanceActionProcessInstance](/types/4/0462-Governance-Action-Processes) that represents a running instance of a Governance Action Process.  It captures the start and end time of the process's execution.
 
 ??? functional "Unity Catalog Support"
-    * There are new [survey services and integration connectors](/connectors/unity-catalog) to support the new open-source Unity Catalog (UC).
+    There are new [survey services and integration connectors](/connectors/unity-catalog) to support the new open-source Unity Catalog (UC).
 
 ??? functional "Smarter integration daemon"
-    * In addition to the regular refreshes, the integration daemon will refresh an integration connector whenever a new catalog target is attached.
+    In addition to the regular refreshes, the integration daemon will refresh an integration connector whenever a new catalog target is attached.
+
+??? functional "Extensions to the Open Integration Framework"
+    The OIF includes a RequestedCatalogTargetsManager class plus new base class methods for integration connectors that support dynamic configuration through catalog targets.  This means the specialized implementation for processing a single catalog target can be implemented in a simple class, and the IntegrationConnectorBase will handle the changing list of catalog targets.
+
+??? functional "Open Lineage Connectors now work with catalog targets"
+    The [Open Lineage Connectors](/connectors/#open-lineage-events) now support dynamic configuration through [catalog targets](/concepts/catalog-target).  This means that new Kafka Topics supplying open lineage events can be dynamically configured and new publishing destination APIs and folders can be added to the running connectors.
+
+??? danger "Changes to the default Configuration Document Store"
+    The Google Tink methods used in the [encrypted config document store](https://github.com/odpi/egeria/tree/main/open-metadata-implementation/adapters/open-connectors/configuration-store-connectors/configuration-encrypted-file-store-connector) have been deprecated for some time. This connector was written (and used as the default) at a time when certificates and passwords were a part of the configuration document. With the introduction of the secrets connector, these are now stored in protected areas outside the configuration document so that an encrypted store is not necessary. This PR switches the default config store to the clear-text file implementation. In a later release, the encrypted file version of the connector will probably be removed unless updates to it to replace the deprecated methods are contributed to the project by an interested party.
+
+    If you are currently using the encrypted file configuration document store, you can continue to use it by setting the `platform.configstore.provider` value in the platform's `application.properties` file.
+
+    ```
+    platform.configstore.provider=org.odpi.openmetadata.adapters.adminservices.configurationstore.encryptedfile.EncryptedFileBasedServerConfigStoreProvider
+    ```
+
+    Alternatively, if you with to switch to the clear-text version, use the administration services `getStoredConfiguration()` method to extract the JSON for your each of your server's configuration document while the encrypted configuration document file store is in place.  Then delete the encrypted files from `platform/data/servers` and restart the platform with the clear-text configuration document store in place.  Use the administration services `setOMAGServerConfig()` method to add your saved JSON back into the configuration document store.
+
+    
 
 
 
